Add buttons for different functionalities
- Added clear grid button which when clicked clears the grid container cells to white color
- Added random color button which changes grid's cell's color to random rgb values
- Added black color button that changes grid's cell's color to black color
- Added eraser button that changes grid's cell's color to white color

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
     <header>
       <h1>Etch a Sketch</h1>
     </header>
-    <button id="grid-size-button">Change Grid Size</button>
+    <div id="buttons">
+      <button id="grid-size-button">Change Grid Size</button>
+      <button id="random-color-button">Get Random Color</button>
+      <button id="black-color-button">Black Color</button>
+      <button id="eraser-button">Eraser</button>
+      <button id="clear-button">Clear Grid</button>
+    </div>
     <div class="container">
       <div class="grid-container"></div>
     </div>
